--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,9 @@
 	<title>Document</title>
 </head>
 <body>
-	<div id="app"></div>
+	<button id="check">新手报到</button>
+    <ul id="world-list">
+    </ul>
 	<script src="/dist/main.js"></script>
 </body>
 </html>
